--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 
 		<!-- fa fa icon -->
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+		<!-- stylesheet -->
+		<link rel="stylesheet" href="style.css" type="css">
 	</head>
 	<body>
 		<div class="container">
