Update html links and test style file

--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<!-- Meta -->
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width">
-		<title>Jared</title>
+		<title>Jared Atandi</title>
 
 		<!-- favicon -->
 		<link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
@@ -15,7 +16,7 @@
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 		<!-- stylesheet -->
-		<link rel="stylesheet" href="style.css" type="css">
+		<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
 		<div class="container">
