--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<body>
 		<div class="container">
 			<div class="logo">
-				<h1>Jared</h1>
+				<h1>Welcome</h1>
 			</div>
 			<div class="intro">
 				<div class="primary">
