--- a/index.html
+++ b/index.html
@@ -21,25 +21,30 @@
 	<body>
 		<div class="container">
 			<div class="logo">
-				<h1>Welcome</h1>
+				<h1 class="welcome">Welcome</h1>
 			</div>
 			<div class="intro">
 				<div class="primary">
-					<p id="primary">Hey there. I’m Jared 
-					I’m a software developer</p>	
+					<p class="primary-text"
+					   id="primary">Hey there. I’m Jared 
+					   <span id="career">I’m a software
+						   developer</span></p>	
 				</div>
-				<div class="support-text">
-					<p id="support-text"> I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, 
-					don’t hestiate to contact me.</p>
-				</div>
-				<div class="social">
-					<i class="fa fa-twitter" aria-hidden="true"></i>
-					<i class="fa fa-linkedin" aria-hidden="true"></i>
-					<i class="fa fa-medium" aria-hidden="true"></i>
-					<i class="fa fa-github" aria-hidden="true"></i>
-					<i class="fa fa-reddit" aria-hidden="true"></i>
-				</div>
-
+			</div>
+			<div class="support-text">
+				<p id="support-text"> I can help you build
+				a product , feature or website Look
+				through some of my work and experience! If
+				you like what you see and have a project
+				you need coded, 
+				don’t hestiate to contact me.</p>
+			</div>
+			<div class="social">
+				<i class="fa fa-twitter" aria-hidden="true"></i>
+				<i class="fa fa-linkedin" aria-hidden="true"></i>
+				<i class="fa fa-medium" aria-hidden="true"></i>
+				<i class="fa fa-github" aria-hidden="true"></i>
+				<i class="fa fa-reddit" aria-hidden="true"></i>
 			</div>
 		</div>
 
