Add hamburger menu to the html file

--- a/index.html
+++ b/index.html
@@ -20,8 +20,16 @@
 	</head>
 	<body>
 		<div class="container">
-			<div class="logo">
+			<div class="nav-bar">
 				<h1 class="welcome">Welcome</h1>
+				<div class="hamburger">
+					<div class="ham-line">
+					</div>
+					<div class="ham-line">
+					</div>
+					<div class="ham-line">
+					</div>
+				</div>
 			</div>
 			<div class="intro">
 				<div class="primary">
@@ -45,6 +53,9 @@
 				<i class="fa fa-medium" aria-hidden="true"></i>
 				<i class="fa fa-github" aria-hidden="true"></i>
 				<i class="fa fa-reddit" aria-hidden="true"></i>
+			</div>
+			<div>
+				<img id="scroll-img" src="images/scroll-down.png" alt="scroll-down"/>
 			</div>
 		</div>
 
