Fix style in index.html, Add svg pol

--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<!-- Meta -->
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width">
 		<title>Jared Atandi</title>
@@ -20,6 +19,7 @@
 	</head>
 	<body>
 		<div class="container">
+			<!-- navbar -->
 			<div class="nav-bar">
 				<h1 class="welcome">Welcome</h1>
 				<div class="hamburger">
@@ -31,6 +31,8 @@
 					</div>
 				</div>
 			</div>
+
+			<!-- intro -->
 			<div class="intro">
 				<div class="primary">
 					<p class="primary-text"
@@ -39,6 +41,8 @@
 						   developer</span></p>	
 				</div>
 			</div>
+
+			<!-- Support text -->
 			<div class="support-text">
 				<p id="support-text"> I can help you build
 				a product , feature or website Look
@@ -47,6 +51,8 @@
 				you need coded, 
 				don’t hestiate to contact me.</p>
 			</div>
+
+			<!-- Social media -->
 			<div class="social">
 				<i class="fa fa-twitter" aria-hidden="true"></i>
 				<i class="fa fa-linkedin" aria-hidden="true"></i>
@@ -58,6 +64,5 @@
 				<img id="scroll-img" src="images/scroll-down.png" alt="scroll-down"/>
 			</div>
 		</div>
-
 	</body>
 </html>
