--- a/index.html
+++ b/index.html
@@ -21,13 +21,17 @@
 		<div class="container">
 			<!-- navbar -->
 			<div class="nav-bar">
-				<h1 class="welcome">Welcome</h1>
-				<div class="hamburger">
-					<div class="ham-line">
-					</div>
-					<div class="ham-line">
-					</div>
-					<div class="ham-line">
+				<div>
+					<h1 class="welcome">Welcome</h1>
+				</div>
+				<div>
+					<div class="hamburger">
+						<div class="ham-line">
+						</div>
+						<div class="ham-line">
+						</div>
+						<div class="ham-line">
+						</div>
 					</div>
 				</div>
 			</div>
