Use acceptable semantics for the p tag

--- a/index.html
+++ b/index.html
@@ -39,35 +39,39 @@
 
 			<!-- intro -->
 			<div class="intro">
-				<div class="primary">
-					<p class="primary-text"
-					   id="primary">Hey there. I’m Jared 
-					   <span id="career">I’m a software
-						   developer</span></p>	
+				<div>
+					<h1 class="primary-text"
+					    id="primary">Hey there. I’m Jared 
+				</div>
+				<div>
+					<h1 class="primary-text"id="career">I’m a software
+						developer</h1></h1>	
 				</div>
 			</div>
 
 			<!-- Support text -->
 			<div class="support-text">
-				<p id="support-text"> I can help you build
-				a product , feature or website Look
-				through some of my work and experience! If
-				you like what you see and have a project
-				you need coded, 
-				don’t hestiate to contact me.</p>
+				<h1 id="support-text"> I can help you build
+					a product , feature or website Look
+					through some of my work and experience! If
+					you like what you see and have a project
+					you need coded, 
+					don’t hestiate to contact me.</h1>
 			</div>
 
-			<!-- Social media -->
 			<div class="social">
-				<i class="fa fa-twitter" aria-hidden="true"></i>
-				<i class="fa fa-linkedin" aria-hidden="true"></i>
-				<i class="fa fa-medium" aria-hidden="true"></i>
-				<i class="fa fa-github" aria-hidden="true"></i>
-				<i class="fa fa-reddit" aria-hidden="true"></i>
+				<ul id="social-icons">
+
+					<li><i class="fa fa-2x fa-twitter" aria-hidden="true"></i></li>
+					<li><i class="fa fa-2x fa-linkedin" aria-hidden="true"></i></li>
+					<li><i class="fa fa-2x fa-medium" aria-hidden="true"></i></li>
+					<li><i class="fa fa-2x fa-github" aria-hidden="true"></i></li>
+					<li><i class="fa fa-2x fa-reddit" aria-hidden="true"></i></li>
+				</ul>
 			</div>
-			<div>
-				<img id="scroll-img" src="images/scroll-down.png" alt="scroll-down"/>
-			</div>
+		</div>
+		<div>
+			<img id="scroll-img" src="images/scroll-down.png" alt="scroll-down"/>
 		</div>
 	</body>
 </html>
