Change doc semantics

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 		<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
-		<div class="container">
+		<section class="container">
 			<!-- navbar -->
-			<div class="nav-bar">
+			<nav class="nav-bar">
 				<div>
 					<h1 class="welcome">Welcome</h1>
 				</div>
@@ -35,10 +35,10 @@
 					</div>
 				</div>
 
-			</div>
+			</nav>
 
 			<!-- intro -->
-			<div class="intro">
+			<header class="intro">
 				<div>
 					<h1 class="primary-text"
 					    id="primary">Hey there. I’m Jared 
@@ -47,19 +47,19 @@
 					<h1 class="primary-text"id="career">I’m a software
 						developer</h1></h1>	
 				</div>
-			</div>
+			</header>
 
 			<!-- Support text -->
-			<div class="support-text">
+			<header class="support-text">
 				<h1 id="support-text"> I can help you build
 					a product , feature or website Look
 					through some of my work and experience! If
 					you like what you see and have a project
 					you need coded, 
 					don’t hestiate to contact me.</h1>
-			</div>
+			</header>
 
-			<div class="social">
+			<nav class="social">
 				<ul id="social-icons">
 
 					<li><i class="fa fa-2x fa-twitter" aria-hidden="true"></i></li>
@@ -68,10 +68,10 @@
 					<li><i class="fa fa-2x fa-github" aria-hidden="true"></i></li>
 					<li><i class="fa fa-2x fa-reddit" aria-hidden="true"></i></li>
 				</ul>
-			</div>
-		</div>
-		<div>
+			</nav>
+		</section>
+		<section>
 			<img id="scroll-img" src="images/scroll-down.png" alt="scroll-down"/>
-		</div>
+		</section>
 	</body>
 </html>
