Update index html

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 				</div>
 				<div>
 					<h1 class="primary-text"id="career">I’m a software
-						developer</h1></h1>	
+						developer</h1>
 				</div>
 			</header>
 
@@ -72,6 +72,9 @@
 		</section>
 		<section>
 			<img id="scroll-img" src="images/scroll-down.png" alt="scroll-down"/>
+		</section>
+		<section>
+			
 		</section>
 	</body>
 </html>
