Move the scroll btn to headline container

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 		<!-- stylesheet -->
-		<link rel="stylesheet" href="style.css">
+		<link rel="stylesheet" href="css/style.css">
+		<link rel="stylesheet" href="css/about-me.css" type="text/css" media="screen">
 	</head>
 	<body>
 		<section class="container">
@@ -72,10 +73,23 @@
 						<li><a class="fa"  href="#" target="_blank"><img src="images/angellist.svg" alt="angellist"/></a></li>
 					</ul>
 				</nav>
-				<div>
-					<img id="scroll-img" src="images/scroll-down.png" alt="scroll-down"/>
+				<div class="action">
+					<img id="scroll-img" src="images/Disabled.svg" alt="scroll-down"/>
 				</div>
 			</section>
+		</section>
+		<section class="about-me">
+			<div class="about-me-title">
+				<div>
+					<h1 class="about-me-text">My Recent Works</h1>
+				</div>
+				<div>
+					<img src="images/Indicator.svg" alt="scroll-button"/>	
+				</div>
+			</div>
+			<div>
+				<h1>Empty</h1>
+			</div>
 		</section>
 	</body>
 </html>
