Link the ham svg

--- a/index.html
+++ b/index.html
@@ -27,14 +27,7 @@
 						<h1 class="welcome">Welcome</h1>
 					</div>
 					<div>
-						<div class="hamburger">
-							<div class="ham-line">
-							</div>
-							<div class="ham-line">
-							</div>
-							<div class="ham-line">
-							</div>
-						</div>
+					<img src="images/ham.svg" alt="navigation button"/>
 					</div>
 
 				</nav>
@@ -87,8 +80,169 @@
 					<img src="images/Indicator.svg" alt="scroll-button"/>	
 				</div>
 			</div>
-			<div>
-				<h1>Empty</h1>
+			<div class="prj">
+				<div class="card">
+					<div class="abt-me-img">
+						<img src="images/comp.png" alt=""/>
+					</div>
+					<h1>Multi-Post Stories Gain+Glory</h1>
+					<div class="text">
+						<div class="framework">
+
+							<div>
+								<button>Ruby on rails</button>
+							</div>
+							<div>
+								<button>css</button>
+							</div>
+							<div>
+								<button>JavaScript</button>
+							</div>
+							<div>
+								<button>html</button>
+							</div>
+
+						</div>
+						<div class="see-prj">
+							<button>See Project</button>
+						</div>
+					</div>
+				</div>
+				<div class="card">
+					<div class="abt-me-img">
+						<img src="images/comp.png" alt="portfolio"/>
+					</div>
+					<h1>Multi-Post Stories Gain+Glory</h1>
+					<div class="text">
+						<div class="framework">
+
+							<div>
+								<button>Ruby on rails</button>
+							</div>
+							<div>
+								<button>css</button>
+							</div>
+							<div>
+								<button>JavaScript</button>
+							</div>
+							<div>
+								<button>html</button>
+							</div>
+
+						</div>
+						<div class="see-prj">
+							<button>See Project</button>
+						</div>
+					</div>
+				</div>
+				<div class="card">
+					<div class="abt-me-img">
+						<img src="images/comp.png" alt=""/>
+					</div>
+					<h1>Multi-Post Stories Gain+Glory</h1>
+					<div class="text">
+						<div class="framework">
+
+							<div>
+								<button>Ruby on rails</button>
+							</div>
+							<div>
+								<button>css</button>
+							</div>
+							<div>
+								<button>JavaScript</button>
+							</div>
+							<div>
+								<button>html</button>
+							</div>
+
+						</div>
+						<div class="see-prj">
+							<button>See Project</button>
+						</div>
+					</div>
+				</div>
+				<div class="card">
+					<div class="abt-me-img">
+						<img src="images/comp.png" alt="portfolio"/>
+					</div>
+					<h1>Multi-Post Stories Gain+Glory</h1>
+					<div class="text">
+						<div class="framework">
+
+							<div>
+								<button>Ruby on rails</button>
+							</div>
+							<div>
+								<button>css</button>
+							</div>
+							<div>
+								<button>JavaScript</button>
+							</div>
+							<div>
+								<button>html</button>
+							</div>
+
+						</div>
+						<div class="see-prj">
+							<button>See Project</button>
+						</div>
+					</div>
+				</div>
+				<div class="card">
+					<div class="abt-me-img">
+						<img src="images/comp.png" alt="portfolio"/>
+					</div>
+					<h1>Multi-Post Stories Gain+Glory</h1>
+					<div class="text">
+						<div class="framework">
+
+							<div>
+								<button>Ruby on rails</button>
+							</div>
+							<div>
+								<button>css</button>
+							</div>
+							<div>
+								<button>JavaScript</button>
+							</div>
+							<div>
+								<button>html</button>
+							</div>
+
+						</div>
+						<div class="see-prj">
+							<button>See Project</button>
+						</div>
+					</div>
+				</div>
+				<div class="card">
+					<div class="abt-me-img">
+						<img src="images/comp.png" alt="portfolio"/>
+					</div>
+					<h1>Multi-Post Stories Gain+Glory</h1>
+					<div class="text">
+						<div class="framework">
+
+							<div>
+								<button>Ruby on rails</button>
+							</div>
+							<div>
+								<button>css</button>
+							</div>
+							<div>
+								<button>JavaScript</button>
+							</div>
+							<div>
+								<button>html</button>
+							</div>
+
+						</div>
+						<div class="see-prj">
+							<button>See Project</button>
+						</div>
+					</div>
+				</div>
 			</div>
 		</section>
 	</body>
