--- a/index.html
+++ b/index.html
@@ -26,13 +26,12 @@
 					<div>
 						<h1 class="welcome">Welcome</h1>
 					</div>
-					<div>
+					<div class="ham-menu">
 					<img src="images/ham.svg" alt="navigation button"/>
 					</div>
 
 				</nav>
 			</section>
-
 			<!-- intro -->
 			<section class="hero">
 				<header class="intro">
@@ -48,12 +47,15 @@
 
 				<!-- Support text -->
 				<header class="support-text">
+					<div>
 					<h1 id="support-text"> I can help you build
 						a product , feature or website Look
 						through some of my work and experience! If
 						you like what you see and have a project
 						you need coded, 
 						don’t hestiate to contact me.</h1>
+						
+					</div>
 				</header>
 
 				<nav class="social">
@@ -66,7 +68,7 @@
 						<li><a class="fa"  href="#" target="_blank"><img src="images/angellist.svg" alt="angellist"/></a></li>
 					</ul>
 				</nav>
-				<div class="action">
+				<div> 
 					<img id="scroll-img" src="images/Disabled.svg" alt="scroll-down"/>
 				</div>
 			</section>
@@ -89,17 +91,17 @@
 					<div class="text">
 						<div class="framework">
 
-							<div>
-								<button>Ruby on rails</button>
+							<div class="btn-frw">
+								<button id="ruby">Ruby on rails</button>
 							</div>
-							<div>
-								<button>css</button>
+							<div class="btn-frw">
+								<button id="css">css</button>
 							</div>
-							<div>
-								<button>JavaScript</button>
+							<div class="btn-frw">
+								<button id="js">JavaScript</button>
 							</div>
-							<div>
-								<button>html</button>
+							<div class="btn-frw">
+								<button id="html">html</button>
 							</div>
 
 						</div>
