Add the recent work markup

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 
 		<!-- stylesheet -->
 		<link rel="stylesheet" href="css/style.css">
-		<link rel="stylesheet" href="css/about-me.css" type="text/css" media="screen">
+		<link rel="stylesheet" href="css/recent-works.css" type="text/css" media="screen">
+		<link rel="stylesheet" href="css/description.css" type="text/css" media="screen">
 	</head>
 	<body>
 		<section class="container">
@@ -27,12 +28,13 @@
 						<h1 class="welcome">Welcome</h1>
 					</div>
 					<div class="ham-menu">
-					<img src="images/ham.svg" alt="navigation button"/>
+						<img src="images/ham.svg" alt="navigation button"/>
 					</div>
 
 				</nav>
 			</section>
 			<!-- intro -->
+			<div class="background">
 			<section class="hero">
 				<header class="intro">
 					<div>
@@ -48,13 +50,13 @@
 				<!-- Support text -->
 				<header class="support-text">
 					<div>
-					<h1 id="support-text"> I can help you build
-						a product , feature or website Look
-						through some of my work and experience! If
-						you like what you see and have a project
-						you need coded, 
-						don’t hestiate to contact me.</h1>
-						
+						<h1 id="support-text"> I can help you build
+							a product , feature or website Look
+							through some of my work and experience! If
+							you like what you see and have a project
+							you need coded, 
+							don’t hestiate to contact me.</h1>
+
 					</div>
 				</header>
 
@@ -68,10 +70,11 @@
 						<li><a class="fa"  href="#" target="_blank"><img src="images/angellist.svg" alt="angellist"/></a></li>
 					</ul>
 				</nav>
-				<div> 
+				<div class="scroll-down"> 
 					<img id="scroll-img" src="images/Disabled.svg" alt="scroll-down"/>
 				</div>
 			</section>
+			</div>
 		</section>
 		<section class="about-me">
 			<div class="about-me-title">
@@ -83,6 +86,8 @@
 				</div>
 			</div>
 			<div class="prj">
+
+				<!---Card 1-->
 				<div class="card">
 					<div class="abt-me-img">
 						<img src="images/comp.png" alt=""/>
@@ -90,19 +95,28 @@
 					<h1>Multi-Post Stories Gain+Glory</h1>
 					<div class="text">
 						<div class="framework">
-
-							<div class="btn-frw">
+							<ul class="languages">
+								<li>
+									<a href="#">
 								<button id="ruby">Ruby on rails</button>
-							</div>
-							<div class="btn-frw">
-								<button id="css">css</button>
-							</div>
-							<div class="btn-frw">
-								<button id="js">JavaScript</button>
-							</div>
-							<div class="btn-frw">
-								<button id="html">html</button>
-							</div>
+								</a>
+								</li>
+								<li>
+									<a href="#">
+								<button id="ruby">Javascript</button>
+								</a>
+								</li>
+								<li>
+									<a href="#">
+								<button id="ruby">css</button>
+								</a>
+								</li>
+								<li>
+									<a href="#">
+								<button id="ruby">html</button>
+								</a>
+								</li>
+							</ul>
 
 						</div>
 						<div class="see-prj">
@@ -110,33 +124,8 @@
 						</div>
 					</div>
 				</div>
-				<div class="card">
-					<div class="abt-me-img">
-						<img src="images/comp.png" alt="portfolio"/>
-					</div>
-					<h1>Multi-Post Stories Gain+Glory</h1>
-					<div class="text">
-						<div class="framework">
-
-							<div>
-								<button>Ruby on rails</button>
-							</div>
-							<div>
-								<button>css</button>
-							</div>
-							<div>
-								<button>JavaScript</button>
-							</div>
-							<div>
-								<button>html</button>
-							</div>
-
-						</div>
-						<div class="see-prj">
-							<button>See Project</button>
-						</div>
-					</div>
-				</div>
+		
+				<!---Card 2-->
 				<div class="card">
 					<div class="abt-me-img">
 						<img src="images/comp.png" alt=""/>
@@ -144,19 +133,28 @@
 					<h1>Multi-Post Stories Gain+Glory</h1>
 					<div class="text">
 						<div class="framework">
-
-							<div>
-								<button>Ruby on rails</button>
-							</div>
-							<div>
-								<button>css</button>
-							</div>
-							<div>
-								<button>JavaScript</button>
-							</div>
-							<div>
-								<button>html</button>
-							</div>
+							<ul class="languages">
+								<li>
+									<a href="#">
+								<button id="ruby">Ruby on rails</button>
+								</a>
+								</li>
+								<li>
+									<a href="#">
+								<button id="ruby">Javascript</button>
+								</a>
+								</li>
+								<li>
+									<a href="#">
+								<button id="ruby">css</button>
+								</a>
+								</li>
+								<li>
+									<a href="#">
+								<button id="ruby">html</button>
+								</a>
+								</li>
+							</ul>
 
 						</div>
 						<div class="see-prj">
@@ -164,26 +162,37 @@
 						</div>
 					</div>
 				</div>
+
+				<!---Card 3-->
 				<div class="card">
 					<div class="abt-me-img">
-						<img src="images/comp.png" alt="portfolio"/>
+						<img src="images/comp.png" alt=""/>
 					</div>
 					<h1>Multi-Post Stories Gain+Glory</h1>
 					<div class="text">
 						<div class="framework">
-
-							<div>
-								<button>Ruby on rails</button>
-							</div>
-							<div>
-								<button>css</button>
-							</div>
-							<div>
-								<button>JavaScript</button>
-							</div>
-							<div>
-								<button>html</button>
-							</div>
+							<ul class="languages">
+								<li>
+									<a href="#">
+								<button id="ruby">Ruby on rails</button>
+								</a>
+								</li>
+								<li>
+									<a href="#">
+								<button id="ruby">Javascript</button>
+								</a>
+								</li>
+								<li>
+									<a href="#">
+								<button id="ruby">css</button>
+								</a>
+								</li>
+								<li>
+									<a href="#">
+								<button id="ruby">html</button>
+								</a>
+								</li>
+							</ul>
 
 						</div>
 						<div class="see-prj">
@@ -191,26 +200,39 @@
 						</div>
 					</div>
 				</div>
+
+
+
+				<!---Card 3-->
 				<div class="card">
 					<div class="abt-me-img">
-						<img src="images/comp.png" alt="portfolio"/>
+						<img src="images/comp.png" alt=""/>
 					</div>
 					<h1>Multi-Post Stories Gain+Glory</h1>
 					<div class="text">
 						<div class="framework">
-
-							<div>
-								<button>Ruby on rails</button>
-							</div>
-							<div>
-								<button>css</button>
-							</div>
-							<div>
-								<button>JavaScript</button>
-							</div>
-							<div>
-								<button>html</button>
-							</div>
+							<ul class="languages">
+								<li>
+									<a href="#">
+								<button id="ruby">Ruby on rails</button>
+								</a>
+								</li>
+								<li>
+									<a href="#">
+								<button id="ruby">Javascript</button>
+								</a>
+								</li>
+								<li>
+									<a href="#">
+								<button id="ruby">css</button>
+								</a>
+								</li>
+								<li>
+									<a href="#">
+								<button id="ruby">html</button>
+								</a>
+								</li>
+							</ul>
 
 						</div>
 						<div class="see-prj">
@@ -218,26 +240,38 @@
 						</div>
 					</div>
 				</div>
+
+
+				<!---Card 4-->
 				<div class="card">
 					<div class="abt-me-img">
-						<img src="images/comp.png" alt="portfolio"/>
+						<img src="images/comp.png" alt=""/>
 					</div>
 					<h1>Multi-Post Stories Gain+Glory</h1>
 					<div class="text">
 						<div class="framework">
-
-							<div>
-								<button>Ruby on rails</button>
-							</div>
-							<div>
-								<button>css</button>
-							</div>
-							<div>
-								<button>JavaScript</button>
-							</div>
-							<div>
-								<button>html</button>
-							</div>
+							<ul class="languages">
+								<li>
+									<a href="#">
+								<button id="ruby">Ruby on rails</button>
+								</a>
+								</li>
+								<li>
+									<a href="#">
+								<button id="ruby">Javascript</button>
+								</a>
+								</li>
+								<li>
+									<a href="#">
+								<button id="ruby">css</button>
+								</a>
+								</li>
+								<li>
+									<a href="#">
+								<button id="ruby">html</button>
+								</a>
+								</li>
+							</ul>
 
 						</div>
 						<div class="see-prj">
@@ -245,6 +279,83 @@
 						</div>
 					</div>
 				</div>
+
+				<!---Card 5-->
+				<div class="card">
+					<div class="abt-me-img">
+						<img src="images/comp.png" alt=""/>
+					</div>
+					<h1>Multi-Post Stories Gain+Glory</h1>
+					<div class="text">
+						<div class="framework">
+							<ul class="languages">
+								<li>
+									<a href="#">
+								<button id="ruby">Ruby on rails</button>
+								</a>
+								</li>
+								<li>
+									<a href="#">
+								<button id="ruby">Javascript</button>
+								</a>
+								</li>
+								<li>
+									<a href="#">
+								<button id="ruby">css</button>
+								</a>
+								</li>
+								<li>
+									<a href="#">
+								<button id="ruby">html</button>
+								</a>
+								</li>
+							</ul>
+
+						</div>
+						<div class="see-prj">
+							<button>See Project</button>
+						</div>
+					</div>
+				</div>
+
+			</div>
+		</section>
+
+		<!--About me section-->
+		<section>
+		<div class="background-1">
+				<img src="images/illustration 1- about me-mobile.svg" alt="background">
+			</div>
+
+			<!-- about me content -->
+	    <div class="description">
+				<div class="me">
+					<div class="me-title">
+						<h1>About me</h1>
+					</div>
+					<div class="me-des">
+					<h1 id="me-des">
+						I can help you build a product, <br> feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, 
+							don’t hestiate to contact me.
+						</h1>
+					</div>
+					<div class="btn-resume">
+						<a href="#">
+						<button>Get My Resume</button>
+						</a>
+					</div>
+				</div>
+			<div class="background-2">
+				<img src="images/illustration 2-about me mobile.svg" alt="background">
+			</div>
+		</div>
+
+			<div class="about-me-cards">
+				<div class="icon-languages">
+
+
+				</div>
+				
 			</div>
 		</section>
 	</body>
