Link the renamed css files

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<!-- stylesheet -->
 		<link rel="stylesheet" href="css/style.css">
 		<link rel="stylesheet" href="css/recent-works.css" type="text/css" media="screen">
-		<link rel="stylesheet" href="css/description.css" type="text/css" media="screen">
+		<link rel="stylesheet" href="css/about-me.css" type="text/css" media="screen">
 	</head>
 	<body>
 		<section class="container">
