Add the about me page

--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
 		</section>
 
 		<!--About me section-->
-		<section>
+		<section class="about-me-sec">
 		<div class="background-1">
 				<img src="images/illustration 1- about me-mobile.svg" alt="background">
 			</div>
@@ -348,15 +348,132 @@
 			<div class="background-2">
 				<img src="images/illustration 2-about me mobile.svg" alt="background">
 			</div>
-		</div>
 
+		<div class="portfolio">
+
+			<!-- about-me-card  1 -->
 			<div class="about-me-cards">
 				<div class="icon-languages">
-
-
+					<img src="images/icon-languages.svg" alt="languages">
 				</div>
-				
+				<div>
+					<h1>
+						Languages
+					</h1>
+				</div>
+						<div class="abt-frameworks">
+							<ul class="abt-languages">
+								<li>
+									<a href="#">
+								<button id="ruby">Javascript</button>
+								</a>
+								</li>
+								<li>
+									<a href="#">
+								<button id="ruby">Ruby</button>
+								</a>
+								</li>
+								<li>
+									<a href="#">
+								<button id="ruby">css</button>
+								</a>
+								</li>
+								<li>
+									<a href="#">
+								<button id="ruby">html</button>
+								</a>
+								</li>
+							</ul>
+
+						</div>
 			</div>
+
+			<!-- about-me-card  2 -->
+			<div class="about-me-cards">
+				<div class="icon-languages">
+					<img src="images/icon-frameworks-2.svg" alt="languages">
+				</div>
+				<div>
+					<h1>
+					    Frameworks	
+					</h1>
+				</div>
+						<div class="abt-frameworks">
+							<ul class="abt-languages">
+								<li>
+									<a href="#">
+								<button id="ruby">Bootstrap</button>
+								</a>
+								</li>
+								<li>
+									<a href="#">
+								<button id="ruby">Ruby on rails</button>
+								</a>
+								</li>
+								<li>
+									<a href="#">
+								<button id="ruby">RSpec</button>
+								</a>
+								</li>
+								<li>
+									<a href="#">
+								<button id="ruby">Capybara</button>
+								</a>
+								</li>
+								<li>
+									<a href="#">
+								<button id="ruby">Selenium</button>
+								</a>
+								</li>
+							</ul>
+
+						</div>
+			</div>
+
+			<!-- about-me-card  3 -->
+			<div class="about-me-cards">
+				<div class="icon-languages">
+					<img src="images/icon-skills.svg" alt="languages">
+				</div>
+				<div>
+					<h1>
+					   Skills 
+					</h1>
+				</div>
+						<div class="abt-frameworks">
+							<ul class="abt-languages">
+								<li>
+									<a href="#">
+								<button id="ruby">Codekit</button>
+								</a>
+								</li>
+								<li>
+									<a href="#">
+								<button id="ruby">GitHub</button>
+								</a>
+								</li>
+								<li>
+									<a href="#">
+								<button id="ruby">Codepen</button>
+								</a>
+								</li>
+								<li>
+									<a href="#">
+								<button id="ruby">GitLab</button>
+								</a>
+								</li>
+								<li>
+									<a href="#">
+								<button id="ruby">Terminal</button>
+								</a>
+								</li>
+							</ul>
+
+						</div>
+			</div>
+
+		</div>
+		</div>
 		</section>
 	</body>
 </html>
