--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
 					</div>
 					<div class="btn-resume">
 						<a href="#">
-						<button>Get My Resume</button>
+						<button id="resume-btn">Get My Resume</button>
 						</a>
 					</div>
 				</div>
