Add a class to the resume button

--- a/index.html
+++ b/index.html
@@ -339,8 +339,8 @@
 							don’t hestiate to contact me.
 						</h1>
 					</div>
-					<div class="btn-resume">
-						<a href="#">
+					<div>
+						<a href="#" class="btn">
 						<button id="resume-btn">Get My Resume</button>
 						</a>
 					</div>
