Rename the get my resume button

--- a/index.html
+++ b/index.html
@@ -340,9 +340,7 @@
 						</h1>
 					</div>
 					<div>
-						<a href="#" class="btn">
-						<button id="resume-btn">Get My Resume</button>
-						</a>
+						<a href="#" class="resume-btn"> Get My Resume </a>
 					</div>
 				</div>
 			<div class="background-2">
