--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 		<link rel="stylesheet" href="css/style.css">
 		<link rel="stylesheet" href="css/recent-works.css" type="text/css" media="screen">
 		<link rel="stylesheet" href="css/about-me.css" type="text/css" media="screen">
+		<link rel="stylesheet" href="css/forms.css" type="text/css" media="screen"> 
 	</head>
 	<body>
 		<section class="container">
@@ -472,6 +473,17 @@
 
 		</div>
 		</div>
+		</section>
+		<section>
+			<form class="form">
+				<div> 
+					<h1 class="frm-txt">I'm always interested in hearing about new projects,
+						so if you'd like to chat please get in touch.</h1>
+				</div>
+				<div>
+					
+				</div>
+			</form>
 		</section>
 	</body>
 </html>
